# Combine.Combinator

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
data/project_ideas/: cv_projects.txt  nlp_projects.txt  recsys_projects.txt  rl_projects.txt  tabular_projects.txt
src/api/: endpoints.py  schemas.py
src/data/: __init__.py  db.py  models.py
src/data/repo/: interface.py  projects_repo.py
src/data/repositories/: __init__.py  base.py  event_repo.py  team_repo.py  user_team_recommendations_repo.py  users_in_search_repo.py
src/models/combinators/: __init__.py  cosine_distance_combinator.py  diversity_combinator.py  interface.py  nn_combinator.py  random_combinator.py  xgboost_combinator.py
src/models/vectorizers/: __init__.py  bert_vectorizors.py  interface.py  random_vectorizor.py  tf_idf_vectorizer.py  word2vec_vectorizer.py
src/service/: excel_parse_service.py  recommendation_service.py
