[tool.poetry]
name = "combine-combinator"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
readme = "README.md"
packages = [{ include = "models", from = "src" },
            { include = "service", from = "src" },
            { include = "api", from = "src" },]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
