[tool.poetry]
name = "combine-combinator"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
packages = [{ include = "models", from = "src" },
            { include = "service", from = "src" },
            { include = "api", from = "src" },
            { include = "data", from = "src" },]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
